@@ -33,16 +33,6 @@
               </div>
             </div>
 
-            <div class="form-group row">
-              <label for="serial_number" class="col-sm-2 col-form-label">SN:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control {{ 'is-invalid' if errors.get('serial_number') else '' }}" id="serial_number" name="serial_number" value="{{ wizard.serial_number or '' }}" required>
-                <div class="invalid-feedback">
-                  Please provide a valid serial number.
-                </div>
-              </div>
-            </div>
-
             <div class="container navigation">
               <div class="row">
                   <div class="col">
